# ChangeLog for dev-ruby/nested_form
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*nested_form-0.3.2 (11 Apr 2013)

  11 Apr 2013; Hans de Graaff <graaff@gentoo.org> +nested_form-0.3.2.ebuild:
  Version bump.

*nested_form-0.3.1 (03 Apr 2013)

  03 Apr 2013; Hans de Graaff <graaff@gentoo.org> +nested_form-0.3.1.ebuild,
  +metadata.xml:
  Initial import.
