@@ -1,2 +1,1 @@
-DIST nested_form-0.3.1.gem 482304 SHA256 81dad470ccc530bb4c94b49f09ac0109f7b5102c883be1cf20dfef7309bde49e SHA512 4a2ac3845f38c619aba2f5738a26c8b84d1ba50cb21810cfb80ab3752897f426a70d289e9cceba124c77762aef85a1f83313842a13ece42d380e51a319cf4649 WHIRLPOOL ac1ed6a8874ebaf5d3a4502acf92c85836a81f8341fe7c532a398a65cddd8c2cfbb41ea6b10470815696f60f3cb69d595d647e18a257abe0be299528b92c70bf
 DIST nested_form-0.3.2.gem 483840 SHA256 b1c468d7eac781235861c2f74fc9f675df0c4d915d5724aaf7fd29f7891c0538 SHA512 0ac7d62da9c9e51a93631aa6591156d2bc4168ac78670b686481a227037fe7faf80515d9132495d01b972c1421154b9b8e5509d13affee46fdf24b19e71b485d WHIRLPOOL 8cedbe35b95ba3453cad37d19adac87363b2b42b94bea6150ab265793e49346e891d6cf10357918565e5798f323a889cadadee3ff81fa674ab9287b06925db53
