@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/nested_form
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Jul 2014; Hans de Graaff <graaff@gentoo.org> -nested_form-0.3.1.ebuild:
+  Cleanup.
 
 *nested_form-0.3.2 (11 Apr 2013)
 
